--- a/Report/document.tex
+++ b/Report/document.tex
@@ -144,10 +144,6 @@
 
 			Using this behaviour of logical operators allows for quickly and easily assigning variables using a configuration.
 
-			func etc
-
-			return multiple values from a function
-
 			multiple assignment local a, b = 5, 6
 
 			bitwise operators
@@ -208,14 +204,20 @@
 			examples
 
 
-		\subsubsection{Functional Programming}
-			Functions are first class values
-		\subsubsection{Proper Tail Calls}
-			Proper tail calls to allow for recursion
+		\subsubsection{Functions}
+			Lua allows for a function to return multiple values, this is quite a strange concept and can have some downsides, it can make it quite difficult to correctly name a function to reflect the return values. It is a very powerful feature and if handled correctly can improve productivity especially when combined with Lua's variable number of arguments. An example is shown in listing~\ref{lst:Functions1}.
+			\lstinputlisting[style=Lua, label={lst:Functions1}, caption={Functions Sample 1}, firstline=97, lastline=105]{codeSamples/1.lua}
+
+			Functions, in Lua, are first class values with proper lexical scoping~\cite{Ierusalimschy:2013:PLT:2502646}. A first class value in Lua means that a function is essentially the same as any other regular variable, this allows a Lua developer to pass functions into other functions as arguments, return functions, use functions of keys and values of tables and can be assigned to a variable. This is a very valuable trait for a high level scripting language to have as it allows for very interesting techniques such as functional programming.
+
+			Lua has proper tail calls which allows for recursion. If the last thing that a function does is call another function, the calling function is no longer required and is no longer required on the stack, this allows for an infinite recursion without overflowing the stack~\cite{Ierusalimschy:2013:PLT:2502646}. An example of a Lua tail call is shown in listing~\ref{lst:Functions2}.
+			\lstinputlisting[style=Lua, label={lst:Functions2}, caption={Functions Sample 2}, firstline=91, lastline=95]{codeSamples/1.lua}
+
+			Without proper tail calls recursion could overflow the stack however with proper tail calls this is impossible and fits in perfectly with a high level scripting language such as Lua. 
 
 		\subsubsection{Dynamic Module and Library Loading}
 
-			Intro
+			Intro 
 
 			Lua allows for loading modules at run time that were not required at build time, this allows for extremely flexible program extensions. A module is made available through the use of an  ordinary table with functions or variables being accessed through the table.
 
